k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: foodapp

spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  strategy:
    type: Recreate

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: praveen416/backend:81bc3b68d5deea2c26ad0dba83cf415011d8bc99
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          startupProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            failureThreshold: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /ready
              port: 3000
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 5
