k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: foodapp
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: foodapp
spec:
  selector:
    app: backend
  ports:
    - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: foodapp
spec:
  type: NodePort
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
